All pages are done with CSS and HTML

--- a/Faculty/faculty_index.css
+++ b/Faculty/faculty_index.css
@@ -26,7 +26,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; 
-  background: #f0ebe5;
+  background: #FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -47,7 +47,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; /* vertical shape */
-  background: #f0ebe5;
+  background: #FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -69,7 +69,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; /* vertical shape */
-  background: #f0ebe5;
+  background: #FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -91,7 +91,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; 
-  background: #f0ebe5;
+  background: #FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -112,7 +112,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; /* vertical shape */
-  background:#f0ebe5;
+  background:#FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -134,7 +134,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; /* vertical shape */
-  background: #f0ebe5;
+  background: #FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
