--- a/Admin/admin_index.css
+++ b/Admin/admin_index.css
@@ -1,6 +1,6 @@
 body{
    margin: 0;
-  background: white;
+  background: #FFEFE9;
   font-family: Arial, sans-serif;
 }
 .heading{
@@ -26,7 +26,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; 
-  background: #E7D3D3;
+  background: 	#FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -47,7 +47,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; /* vertical shape */
-  background:#E7D3D3;
+  background:	#FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -69,7 +69,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; /* vertical shape */
-  background: #E7D3D3;
+  background: 	#FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -91,7 +91,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; 
-  background: #E7D3D3;
+  background: 	#FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -112,7 +112,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; /* vertical shape */
-  background: #E7D3D3;
+  background: 	#FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -134,7 +134,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; /* vertical shape */
-  background: #E7D3D3;
+  background: 	#FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -156,7 +156,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; /* vertical shape */
-  background: #E7D3D3;
+  background: 	#FFA07A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
