--- a/Student/student_index.css
+++ b/Student/student_index.css
@@ -22,7 +22,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; 
-  background: #e7efe3;
+  background: #FFBC9A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -43,7 +43,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; /* vertical shape */
-  background: #e7efe3;
+  background: #FFBC9A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -65,7 +65,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; /* vertical shape */
-  background: #e7efe3;
+  background: #FFBC9A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
@@ -87,7 +87,7 @@ body{
   margin-top: 20px;
   padding: 20px;
   width: 250px; 
-  background: #e7efe3;
+  background: #FFBC9A;
   border: 1px solid black;
   border-radius: 20px;
   box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.2);
